--- a/index.html
+++ b/index.html
@@ -8,32 +8,30 @@
 
 </body>
 </html>
-<!DOCTYPE html>
-<html>
 <style>
 table, th, td {
-  border:1px solid black;
+  border:1px solid blue;
 }
 </style>
 <body>
 
-<h2>TH elements define table headers</h2>
+<h2>Pasatiempos en los ultimos 3 años</h2>
 
 <table style="width:100%">
   <tr>
-    <th>Person 1</th>
-    <th>Person 2</th>
-    <th>Person 3</th>
+    <th>Año 2022</th>
+    <th>Año 2021</th>
+    <th>Año 2020</th>
   </tr>
   <tr>
-    <td>Emil</td>
-    <td>Tobias</td>
-    <td>Linus</td>
+    <td>Escribir</td>
+    <td>Leer</td>
+    <td>Bailar</td>
   </tr>
   <tr>
-    <td>16</td>
-    <td>14</td>
-    <td>10</td>
+    <td>Ver gossip girl</td>
+    <td>Escribir</td>
+    <td>Escuchar musica</td>
   </tr>
 </table>
 
